Right border on mobile displaying fixed.

--- a/style.css
+++ b/style.css
@@ -274,4 +274,9 @@ a:hover {
     {
         display: none;
     }
+
+    .mobileBorderFix
+    {
+        display: none;
+    }
 }
